@startuml
class Garage.vehiculos.Vehiculo {
- String marca
- double kilometraje
- int numeroDeRuedas
+ int getNumeroDeRuedas()
+ void setNumeroDeRuedas(int)
+ String getMarca()
+ void setMarca(String)
+ double getKilometraje()
+ void setKilometraje(double)
}
class Mundial.Partido {
- Date fecha
- Equipo local
- Equipo visitante
- Resultado resultado
+ Date getFecha()
+ void setFecha(Date)
+ Equipo getLocal()
+ void setLocal(Equipo)
+ Equipo getVisitante()
+ void setVisitante(Equipo)
+ Resultado getResultado()
+ void setResultado(Resultado)
}
class Garage.vehiculos.Motocicleta {
- double cilindrada
+ double getCilindrada()
+ void setCilindrada(double)
+ String toString()
}
class Mundial.EtapaMundial {
- String descripcionEtapa
- ArrayList<Partido> partidos
+ void setDescripcionEtapa(String)
+ void setPartidos(ArrayList<Partido>)
+ String getDescripcionEtapa()
+ ArrayList<Partido> getPartidos()
+ ArrayList<Equipo> getEquiposQueAvanzan()
+ void agregarPartidos(Partido)
+ void removerPartidos(Partido)
}
class Mundial.MundialTest {
+ {static} void main(String[])
}
class Mundial.Llave {
+ ArrayList<Equipo> getEquiposQueAvanzan()
+ String toString()
}
class Main {
+ {static} void main(String[])
}
class Garage.sistemaDeGarage.GarageTest {
+ {static} void main(String[])
}
class Garage.sistemaDeGarage.Garage {
- double precioDeCambioDeUnaRueda
- int capacidadDeVehiculos
- ArrayList<Vehiculo> vehiculos
- int contadorDeVehiculosActuales
- double precioQueSupondríaCambiarTodasLasRuedasDeTodosLosVehículosActuales
- double kilometrajePromedio
+ double getKilometrajePromedio()
+ void setKilometrajePromedio(double)
+ double getPrecioQueSupondríaCambiarTodasLasRuedasDeTodosLosVehículosActuales()
+ void setPrecioQueSupondríaCambiarTodasLasRuedasDeTodosLosVehículosActuales(double)
+ double getPrecioDeCambioDeUnaRueda()
+ void setPrecioDeCambioDeUnaRueda(double)
+ int getCapacidadDeVehiculos()
+ void setCapacidadDeVehiculos(int)
+ ArrayList<Vehiculo> getVehiculos()
+ void setVehiculos(ArrayList<Vehiculo>)
+ int getContadorDeVehiculosActuales()
+ void setContadorDeVehiculosActuales(int)
+ void agregarVehiculo(Vehiculo)
+ void removerVehiculo(Vehiculo)
+ void kilometrajePromedio()
+ void precioQueSupondríaCambiarTodasLasRuedasDeTodosLosVehículosActuales()
+ void mostrarInformacionDelGarajeYSusVehiculosActuales()
}
class Mundial.Equipo {
- String nombre
- ArrayList<Partido> partidosJugados
- int puntaje
+ int getPuntaje()
+ void setPuntaje(int)
+ String getNombre()
+ void setNombre(String)
+ ArrayList<Partido> getPartidosJugados()
+ void setPartidosJugados(ArrayList<Partido>)
}
class Mundial.Grupo {
- ArrayList<Equipo> equipos
- Equipo primerLugarDelGrupo
- Equipo segundoLugarDelGrupo
+ Equipo getPrimerLugarDelGrupo()
+ void setPrimerLugarDelGrupo(Equipo)
+ Equipo getSegundoLugarDelGrupo()
+ void setSegundoLugarDelGrupo(Equipo)
+ ArrayList<Equipo> getEquipos()
+ void setEquipos(ArrayList<Equipo>)
+ void fijarPuntajeDelGrupo(Grupo)
+ ArrayList<Equipo> getEquiposQueAvanzan()
+ void agregarEquipo(Equipo)
}
class Garage.vehiculos.Auto {
- int numeroDePuertas
+ int getNumeroDePuertas()
+ void setNumeroDePuertas(int)
+ String toString()
}
class Mundial.Resultado {
- int golesLocales
- int golesVisitantes
+ int getGolesLocales()
+ void setGolesLocales(int)
+ int getGolesVisitantes()
+ void setGolesVisitantes(int)
+ boolean ganoLocal()
+ boolean empate()
}


Garage.vehiculos.Vehiculo <|-- Garage.vehiculos.Motocicleta
Mundial.EtapaMundial <|-- Mundial.Llave
Mundial.EtapaMundial <|-- Mundial.Grupo
Garage.vehiculos.Vehiculo <|-- Garage.vehiculos.Auto
@enduml